styles/style.css
/* resetting every elements to 0 for padding and margin  */
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* setting up defautlts for root element*/
html{
   font-size:16px;
   color:white;
   background-color: black;
   font-family: sans-serif;
   scrollbar-width: none;
   
}




/* styling background  */
.background{
    width: 100%;
    height: 100vh;
    background: radial-gradient( at 100px 100px,transparent 90%,rgba(0, 0, 0,1.5) 300%);
    box-shadow: inset 0px 50px 400px black;
    object-fit: fill;
    display:flex;
    flex-direction: column;
    justify-content:space-between;
}

/* background image */
#background-image{
    position:absolute;
    filter:brightness(50%) ;
    z-index:-1;
    object-fit:cover;
    object-position: 0px -20px;
    width: inherit;
    height: inherit;
    overflow: hidden;
}


/* styling header section */

.header{
    height:120px;
    padding:0px 148px ;
}

.header-inner-1{
    height:88px;
}

header{
    width:inherit;
    height: inherit;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

/* logo container .logo */
.logo{
  width:30vw;
  display:inline flex;
  justify-content: start;
  align-items: center;
  
}


/* styling logo */

#NetflixLogo{
    width:148px;
    height:40px;
    
}


/* styling nav  */

.nav{
width:70vw;
height:38px;
display:inline flex;
justify-content: end;
align-items: center;

}

nav{
    display:flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    gap:8px;
    
}


/* styling language select and sign up link  */

/* language select */
.lang{
    display: flex;
    align-items: center;
    border: 1px solid rgba(237, 233, 233, 0.336);
    border-radius: 5px;
    padding: 6px 10px;
    gap: 10px;
    

}
#logo-language{
    width:16px;
    height:16px;
}

#english-language{
    font-family: sans-serif;
    color:black;
}
#hindi-language{
    /* font-family:  */
    color:black
}

#language-select{
    background-color: transparent;
    color:white;
    border:none;
    font-weight: 535;
    font-size: 1rem;
    appearance: none;
}

/* signin button /link */
.signin{
    background-color: red;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 70px;
    font-size: 1rem;
    font-weight: 350;
    border-radius: 5px;
}


/* styling front background  section */
.intro{
    display:flex;
    justify-content:center;
    align-items: center;
    flex-direction:column;
    padding:0px 32px 32px;
    width:100vw;
    height:900px;
    box-sizing: border-box;
}


/* heading of intro main section  and their sizes color*/


#heading-inner-1{
    font-size: 3.5rem;
    color:white;
    text-align: center;
    font-weight: 800;
    line-height:4.2rem ;
    padding-bottom: 20px;
}

#heading-inner-2{
    font-size: 20px;
    font-weight: 540;
    padding-bottom: 20px;
}

#heading-inner-3{
    font-size: 16px;
    font-weight: 400;
    padding: 15px;

}

.content{
    display:flex;
    flex-direction: column;
    flex-wrap:wrap;
    justify-content: center;
    align-items: center;
    width:600px;
}

/* section containg signup field and button */

.inputfield{
    width:40rem;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    gap:10px
}

/* input field for email address for sign up */
#signup-email{
    background-color: rgba(21, 19, 19, 0.85);
    width:60%;
    height:50px;
    border-radius: 4px;
    color: white;
    box-shadow: none;
    border:1px solid rgb(98, 93, 93);
    outline: none;
    cursor: text;
    padding-left: 15px;
    font-size: 16px;
    padding-bottom: 0px;
    padding-top: 5px;
    
    

}

#signup-email:focus{
    outline-offset: 2px;
  outline:2px solid white;
  font-weight:450;
}

#signup-email::placeholder{
    color:#bbb;
    font-size: 16px;

}
#get-started-btn{
    background-color: rgba(255, 0, 0, 0.902);
    display: flex;
    border-radius: 5px;
    justify-content: center;
    align-items: center;
    font-size: 24px;
    width:35%;
    height:56px;
    color:white;
    padding:5px;
    font-weight: 700;
    box-shadow: none;
    border:none;
    
}


/* styling trending bar below background section */
.trending-bar{
    position:relative;
    top:-50px;
    width:inherit;
    height:100px;
    overflow:hidden;
   
}



.curved-top{
  position: absolute;
  left: -25%;
  width: 150%;
  right:-25%;
  height: 280%;
  top:8px;
  background: linear-gradient(
                    to right,
                    rgba(0, 0, 0, 0.797) 16%,
                    rgba(184, 40, 105, 1),
                    rgba(229, 9, 20, 1),
                    rgba(184, 40, 105, 1),
                    rgba(0, 0, 0, 0.797) 84%
                );

    border-top-left-radius: 100% 90%;
    border-top-right-radius: 100% 90%;
    z-index:2;
    overflow:hidden;
  
}


.gradient-shade{
    border-top-left-radius: 100% 90%;
    border-top-right-radius: 100% 90%;
    width:inherit;
    height: 100%;
    background:radial-gradient(
                    70% 500% at 50% -405%,
                    rgba(64, 97, 231, 0.4) 80%,
                    rgba(0, 0, 0, 0.1) 100%
                ),black;
        position:relative;
        top:12px;
        z-index: 3;
}



/* styling lower section  */
.lower-section{
    width:100%;
    min-height:100vh;
    padding:0px 22vh;
    display:flex;
    flex-wrap: column;
    flex-direction: column;
    position:relative;
    top:-65px;
    
}


/* sttyling main hero section */

.trending-heading{
    position:relative;
    font-size: 1rem;
    font-weight: 50;
    color:white;
    z-index:4;
}

.trending-heading>h2{
    font-weight: 50;
}


/* movie cards carousel */
main{
    width:inherit;
    display:flex;
    flex-direction: column;
    gap:10px;
   
}

.movie-cards{
    display:flex;
    flex-direction: row;
    flex-wrap: nowrap;
    position:relative;
}


.movie-cards-2{
    display:flex;
    flex-direction: row;
    flex-wrap:nowrap;
    overflow-x: scroll;
    scrollbar-width: none;
    padding:1rem 0px;
    box-sizing: content-box;
    overflow-y:hidden;
    scroll-behavior: smooth;
}

.movie-cards-list{
    min-width:140rem;
    height: min-content;
    list-style-type:none;
    display:flex;
    flex-direction: row;
    flex-wrap:nowrap;
    scroll-behavior: smooth;

}

.cards{
    width:11.25rem;
    height:15.75rem;
    padding:0.375rem 1.375rem;
    box-sizing: content-box;
    border-radius: 5px;
    transition:transform 0.3s;
    z-index:2;


}

.cards:hover{
    transform:scale(1.1);
    z-index:2;
}


.cards *{
    width:100%;
    height: 100%;
    border-radius: 10px;
}


/* each card behave as a button not hyper link */
.card-buttons{
background-color: black;
border:none;

}

.card-buttons-division{
    background-color: black;
    position:relative;
}

.poster{
    display:block;
}

.card-numberings{
    display:inline-block;
    width:3rem;
    height:7rem;
    position:absolute;
    bottom:0rem;
    left:-1.25rem;
    z-index:1;
  
}

.card-numberings-2{
    display:inline-block;
    width:inherit;
    height: inherit;
    font-size: 6.5rem;
    font-weight: 700;
    color: rgb(0, 0, 0);
    -webkit-text-stroke: 0.1rem white;
    text-shadow:0 0 1.5rem rgba(0,0,0,0.5);
}


/* carousel scrolling buttons */

.left-scroll-button,.right-scroll-button{
    height:100%;
    width:30px;
    position:absolute;
    z-index:4;
    display:flex;
    justify-content: center;
    align-items: center;
    background-color: black;
   
}

.left-scroll-button{
    left:-2rem;
}

.right-scroll-button{
    right:-2rem;
}

.left-scroll-button >button,.right-scroll-button >button{
    width: inherit;
    background-color:rgba(62, 60, 60, 0.5);
    border:none;
    height:8rem;
    border-radius: 20px;
    padding:5px;
    box-sizing: content-box;
}


/* more reasons to join benefits section */


.benefits-division{
    width:100%;
    height: min-content;
    padding:1rem 0rem;


}


.benefits-cards-division{
    display:flex;
    width:100%;
    height:100%;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;

}



.benefits>h2{
    font-weight:300;
    padding-top:3rem;
    box-sizing: content-box;
    
}

.benefits-card{
    border-radius: 20px;
    min-height:fit-content;
    height:18rem;
    width:24%;
    background: linear-gradient(149deg,#192247 0%,#210e17 96.86%);
    
    
}


.card-content{
    padding:2rem 1rem;
    width:100%;
    height: 100%;
    display:flex;
    flex-direction:column;
    justify-content: space-between;
}

.card-content>p{
    position:relative;
    top:-5%;
    color:rgba(255,255,255,0.5);
}
.benefits-svg{
    align-self:flex-end;
    justify-items: flex-end;
}



/* styling footer section */
.footer{
    display:flex;
    flex-direction: column;
    flex-wrap:nowrap;

}

.FAQ-heading>h2{
    font-weight:300;
    padding-top: 3rem;
}

.FAQ-section{
    padding-top: 1rem;
    width:100%;
    height:fit-content;
}


.FAQ-boards{
    padding-top: 1rem;
    width:100%;
    height:min-content;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    row-gap:0.5rem;
}

.FAQ-boards *{
    width:100%;
    height:100%;
}

.FAQ{
    width:100%;
    background-color:rgb(45,45,45);
}


/* dislaying content of FAQ boards on radio button click */
.FAQ-boards input[type="radio"]{
    display:none;
}

/* if ckecked -- display content */

input[name="FAQ"]:nth-child(n):checked ~.content{
    display:flex;

}


.FAQ h2{
    color:white;
    font-weight:100;
    font-size: 1.5rem;
    width:fit-content;

}

.FAQ img{
    font-weight:100;
    width:2.75rem;
    height: 2.75rem;
}


.FAQ .FAQ-btn{
    padding:1.5rem;
    height:5rem;
    border: none;
    background-color:rgb(45,45,45);
    display:flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    transition-property:background-color;
    transition-duration: 250ms;
    transition-delay:0s;
    transition-timing-function:cubic-bezier(0.4,0,0.68,0.06);
    border-bottom: 2px solid black;
}

.FAQ .FAQ-btn:hover{
    background-color:rgb(69, 69, 69);
}


.FAQ-boards .content{
    display:none;
}

/* all content of every FAQ is hidden by default */
.FAQ .content{
     font-weight:100;
    font-size: 1.5rem;
    display:none;
    padding:1.5rem;
    gap:1rem;
    flex-direction: column;
    flex-wrap: nowrap;
}


/* FAQ close button */
.FAQ-close {
    background-color: red;
    width:8rem;
    height:3rem;
}
#FAQ-close-btn{
    background-color: red;
}


/* footer lower section containing links and other info */

.footer-lower-section{
    display:flex;
    flex-direction: column;
    width:100%;
    min-height:fit-content;
    height:60vh;
    flex-wrap: nowrap;
    align-items: center;

}

.footer-signupfields{
    display:flex;
    flex-direction: column;
    align-items: center;
    padding:3rem 0rem;
}



/* resizing get started fields for footer */
.footer-signupfields .inputfield{
    width:50rem;
}
.footer-signupfields .inputfield #signup-email{
    width:85%;
}


/* contact link */
.footer-info a{
    color:#bbb;
}

.quick-links ul{
    list-style-type: none;
    display:flex;
    flex-direction:row;
    flex-wrap:wrap;
    gap:1rem;

}

.quick-links li{
    width:24%;
}



/* footer info section and quick links */
.footer-info{
    width:100%;
    height:100%;
    min-height:fit-content;
    display:flex;
    flex-direction:column;
    gap:3rem;
    font-size: 0.9rem;
    color:#bbb;
}

.contact>h3{
    font-weight: normal;
}

/* language section styling inside footer */

.footer-info>.lang{
    width:fit-content;
}

/* lowest section - site name and repcaptcha */

.site-name{
    display:flex;
    flex-direction: column;
    gap:2rem;
    justify-content: space-between;
}

.site-name>p:nth-child(2){
    color:gray;
    font-size: 0.75rem;
}
.site-name a{
    color:rgb(60, 125, 209)
}

